# goblin-lang

./: Cargo.toml  LICENSE  README.md  action.patch  smoke.gob  test.gbln  test_enum.gbln
crates/goblin-ast/: Cargo.toml
crates/goblin-ast/src/: lib.rs
crates/goblin-cli/: Cargo.toml
crates/goblin-cli/src/: main.rs
crates/goblin-cli/tests/: repl_smoke.rs
crates/goblin-diagnostics/: Cargo.toml
crates/goblin-diagnostics/src/: lib.rs
crates/goblin-gql/: Cargo.toml
crates/goblin-interpreter/: Cargo.toml
crates/goblin-interpreter/src/: lib.rs
crates/goblin-lexer/: Cargo.toml
crates/goblin-parser/: Cargo.toml
crates/goblin-source/: Cargo.toml
docs/: cheat-sheet.md  diagnostics.md  formal-semantics.md  gears-philosophy.md  goblin_ebnf_ast_codex.md  language-spec.md  lex-oracle.md  lexer-notes.md  lexer.md
examples/: hello-world.gbln  money-examples.gbln  templates-demo.gbln
scripts/: fix-oracle-headers.ps1
spec/: language-spec.md
tests/scratch/: ampersand_reserved.gbln  args_colon_singleline.gbln  args_newlines.gbln  args_newlines_paren.gbln  assign.gbln  assign_basic.gbln  assign_sanity.gbln  at_errors.gbln  classes_header_only.gbln  classes_with_actions.gbln  collections.gbln  colon_calls.gbln  colon_newline.gbln  compare_layer.gbln  definedness.gbln  definedness_ok.gbln  divmod.gbln  divmod_smoke.gbln  duration_err.gbln  duration_mix.gbln  duration_ok.gbln  explain_power.gbln  free_ns_calls.gbln  freecall.gbln  freecall_colon.gbln  indexing.gbln  joins.gbln  joins_vs_ranges.gbln  lit_newlines.gbln  literals_bool_nil.gbln  logic_and_or.gbln  lower_calls.gbln  member_then_call.gbln  money_ops.gbln  mul_family.gbln  mul_power_prec.gbln  nested_ns.gbln  noshiftassign.gbln  ns_calls.gbln  nullish.gbln  (+25 more)
(+92 files in other folders)
