[package]
name = "goblin-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
goblin_lexer = { package = "goblin-lexer", path = "../goblin-lexer" }
goblin-diagnostics = { path = "../goblin-diagnostics" }
goblin-parser = { path = "../goblin-parser" } 
goblin-gql = { path = "../goblin-gql" }
goblin-interpreter = { path = "../goblin-interpreter" }
goblin-ast = { path = "../goblin-ast" }

[[bin]]
name = "goblin"               # <— this is the installed executable name
path = "src/main.rs"
